Actions
Bug #9785
closedloader.efi: variable 'attr' set but not used
Start date:
2018-09-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Error when warnings are enabled:
../env.c: In function 'efi_print_global': ../env.c:522:10: error: variable 'attr' set but not used [-Werror=unused-but-set-variable] UINT32 attr; ^~~~
Updated by Electric Monk almost 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit c8bfc1e4e5bf8c7324dc1b265113ba9e401264db
commit c8bfc1e4e5bf8c7324dc1b265113ba9e401264db Author: Toomas Soome <tsoome@me.com> Date: 2018-09-10T13:01:34.000Z 9785 loader.efi: variable 'attr' set but not used Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions