9785 loader.efi: variable 'attr' set but not used Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>