usr/src/boot/sys/boot/efi/libefi/env.c
@@ -517,13 +517,11 @@ efi_print_global(const CHAR16 *varnamearg, uint8_t *data, UINTN datasz)
 	    strncmp("Driver", var, 5) == 0 ||
 	    strncmp("SysPrep", var, 7) == 0 ||
 	    strncmp("OsRecovery", var, 10) == 0) {
-		UINT32 attr;
 		UINT16 filepathlistlen;
 		CHAR16 *text;
 		int desclen;
 		EFI_DEVICE_PATH *dp;
 
-		attr = *(uint32_t *)data;
 		data += sizeof(UINT32);
 		filepathlistlen = *(uint16_t *)data;
 		data += sizeof (UINT16);
